Bug 769413 - pre: add SyncStorageRequestDelegate.ifModifiedSince.